# power-smc

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  experiments.py  notebook.ipynb  pyproject.toml  requirements.txt  validate.py
.github/workflows/: tests.yml
power_smc/: __init__.py  baselines.py  hf_model.py  kv_cache.py  plotting.py  power_target.py  proposal.py  ramping.py  smc.py  utils.py
results/: README.md  toy_convergence.csv  toy_variance.csv
tests/: test_experiments.py  test_hf_integration.py  test_kv_cache.py  test_power_target.py  test_proposal.py  test_smc.py
