[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "power-smc"
version = "0.1.0"
description = "Low-latency sequence-level power sampling for training-free LLM reasoning (open reproduction of arXiv 2602.10273)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Karthik Subramanian" }]
keywords = ["sequential-monte-carlo", "power-sampling", "llm-reasoning", "sampling", "transformers"]
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[project.optional-dependencies]
gpu = ["torch>=2.1", "transformers>=4.40", "datasets>=2.18", "accelerate>=0.28", "bitsandbytes>=0.43"]
dev = ["pytest>=7.4"]

[tool.setuptools]
packages = ["power_smc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
